Project store_hub {
  database_type: 'PostgreSQL'
  Note: '''
    # Store Hub — Server Database
  '''
}

Table users as U {
  id bigserial [pk]
  first_name varchar [not null]
  last_name varchar [not null]
  account_id varchar [unique, not null]
  status varchar [not null]
  about varchar [not null]
  email varchar [unique, not null]
  socials jsonb [not null]
  profile_image_url varchar
  hashed_password varchar [not null]
  password_changed_at timestamptz [not null, default: '0001-01-01 00:00:00Z']
  created_at timestamptz [not null, default: `now()`]
  is_active boolean [not null, default: true]
  is_email_verified boolean [not null, default: false]
}

Table sessions {
  id uuid [pk]
  user_id bigint [ref: > U.id, not null]
  token varchar [not null]
  scope varchar [not null]
  user_agent varchar [not null]
  client_ip varchar [not null]
  is_blocked boolean [not null, default: false]
  expires_at timestamptz [not null]
  created_at timestamptz [not null, default: `now()`]
}

Table stores as S {
  id bigserial [pk]
  name varchar [not null]
  description varchar [not null]
  profile_image_url varchar [not null]
  store_account_id varchar [unique, not null]
  is_verified boolean [not null, default: false]
  category varchar [not null]
  is_frozen bool [not null, default: false]
  created_at timestamptz [not null, default: `now()`]
}

Table store_owners {
  user_id bigint [ref: > U.id, not null]
  store_id bigint [ref: > S.id, not null]
  access_level smallint [not null]
  added_at timestamptz [not null, default: `now()`]
  
  Indexes {
    (user_id, store_id)
  }
}

Table items as I {
  id bigserial [pk]
  name varchar [not null]
  description varchar [not null]
  price NUMERIC(10, 2) [not null]
  store_id bigint [not null, ref: > S.id]
  image_urls text[] [not null]
  category varchar [not null]
  discount_percentage NUMERIC(6, 4) [not null]
  supply_quantity bigint [not null]
  extra jsonb [not null]
  is_frozen bool [not null, default: false]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table item_ratings {
  user_id bigint [ref: > U.id, not null]
  item_id bigint [ref: > I.id, not null]
  rating char [not null]
  comment varchar
  created_at timestamptz [not null, default: `now()`]
}

Table orders as O {
  id bigserial [pk] 
  delivery_status varchar [not null]
  delivered_on timestamptz [not null, default: '0001-01-01T00:00:00Z']
  expected_delivery_date timestamptz [not null, default: `now() + interval '3 days'`]
  item_id bigint [not null, ref: > I.id]
  order_quantity int [not null]
  buyer_id bigint [not null, ref: > U.id]
  seller_id bigint [not null, ref: > U.id]
  store_id bigint [not null, ref: > S.id]
  delivery_fee NUMERIC(10, 2) [not null]
  payment_channel varchar [not null]
  payment_method varchar [not null]
  created_at timestamptz [not null, default: `now()`]
}

Table sales {
  id bigserial [pk]
  store_id bigint [not null, ref: > S.id] 
  item_id bigint [not null, ref: > I.id]
  customer_id bigint [not null, ref: > U.id]
  seller_id bigint [not null, ref: > U.id]
  order_id bigint [unique, not null, ref: > O.id]
  created_at timestamptz [not null, default: `now()`]
}